--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,31 @@
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
+
+// Bootstrap Card extends
+.card {
+    .card-header {
+        .card-count-label {
+            width: 25px;
+            height: 25px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 16px;
+            font-weight: bolder;
+        }
+    }
+
+    .card-overflow-panel {
+        overflow-x: auto;
+
+        div.row {
+            flex-wrap: nowrap;
+        }
+    }
+}
+
+// Utilities
+.word-wrap-normal {
+    word-wrap: normal;
+}
